<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#1F0101"
    tools:context="com.example.meoryou.login.LogIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/company_logo"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            app:srcCompat="@drawable/free"
            android:contentDescription="@string/homeme_Front_photo_discription" />

        <EditText
            android:id="@+id/user_name"
            android:inputType="textPersonName"
            style="@style/edittext_style"
            android:hint="@string/homeme_username" />

        <EditText
            android:id="@+id/password"
            style="@style/edittext_style"
            android:inputType="textPassword"
            android:hint= "@string/homeme_password" />

        <Button
            android:id="@+id/login_button"
            style="@style/button_style"
            android:text="@string/homeme_login"
            android:onClick="logInOnClik"/>

        <Button
            android:id="@+id/forget_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homeme_forget_password"
            android:onClick="forgetPasswordOnClick"
            style="?android:attr/borderlessButtonStyle"
            />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homeme_sign_up"
            android:onClick="signUpOnClick"
            style="?android:attr/borderlessButtonStyle"
            />


    </LinearLayout>
</RelativeLayout>
